--- a/report/main.tex
+++ b/report/main.tex
@@ -75,10 +75,34 @@ At first, Yusuf has designed the fetch cycle. Then Hakan and Emre designed the e
 \subsection{Instructions With Address Reference}
 
 \subsection{Instructions Without Address Reference}
-
-
-
-
+    Instructions without address references have four seperate fields whose functionalities differ. Each one has 4 bits. Opcode determines which operation
+will be carrying out. DSTREG means destination register, SREG1 and SREG2 are source registers. There are 10 instruction types.
+\subsubsection{AND}
+    AND operation's opcode is 0x00. It carries out by determining ALU_Funsel as 0111.
+\subsubsection{OR}
+    OR operation's opcode is 0x01. It carries out by determining ALU_Funsel as 1000.
+\subsubsection{NOT}
+    NOT operation's opcode is 0x02. It carries out by determining ALU_Funsel as 0010.
+\subsubsection{ADD}
+    ADD operation's opcode is 0x03. It carries out by determining ALU_Funsel as 0100.
+\subsubsection{SUB}
+    SUB operation's opcode is 0x04, it is responsible for substract operations. It carries out by determining ALU_Funsel as 0101.
+\subsubsection{LSR}
+    LSR operation's opcode is 0x05, it is responsible for logical shift right operations. It carries out by determining ALU_Funsel as 1100.
+\subsubsection{LSL}
+    LSL operation's opcode is 0x06, it is responsible for logical shift left operations. It carries out by determining ALU_Funsel as 1011.
+\subsubsection{INC}
+    INC operation's opcode is 0x07, it is responsible for increment operations. It carries out by determining ALU_Funsel as 0100.
+It takes 3 cycles because in order to increment and then send to ALU, we should first create a register
+which has value 1. Making it takes 2 cycle, first cycle for using a temporary register which has value 0.
+Then in second cycle, we make it 0001 with incrementing and use it in ALU.
+\subsubsection{DEC}
+    DEC operation's opcode is 0x08, it is responsible for decrement operations. It carries out by determining ALU_Funsel as 0101.
+It takes 3 cycles because in order to decrement and then send to ALU, we should first create a register
+which has value 1. Making it takes 2 cycle, first cycle for using a temporary register which has value 0.
+Then in second cycle, we make it 0001 with incrementing and use it in ALU.
+\subsubsection{MOV}
+    MOV operation's opcode is 0x0B. It carries out by determining ALU_Funsel as 0000.
 
 
 \section{OVERALL DESIGN PHOTO}
@@ -96,6 +120,26 @@ At first, Yusuf has designed the fetch cycle. Then Hakan and Emre designed the e
 
 
 \section{DISCUSSION}
+    In this project, we have implemented an ALU system which can take instructions defined in
+Instruction Format. In order to achieve that, we have implemented a counter and by using counter's 
+timing signal output, we have implemented fetch-decode operations and instructions' actual operations on
+registers in register file and address register file. 
+
+    We think we greatly achieve what we wanted. We successfully implemented fetch-decode operations
+and instructions' actual operations defined in their OPCODE part. We've loaded our memory to instruction
+register and used it in ALUSystem's components. While our code has worked, we couldn't run the last ST
+operation successfully. While we achieve the adding numbers in memory from 0xB0 to 0xBA, we couldn't store it
+in memory. It is because we couldn't find a way to write value into the memory. But our success can be seen
+from the simulation bar.
+
+    While doing this homework, we have encountered with a lot of difficulties. One of them is our one teamfriend, Emre,
+were in another city, it maked our job difficult, but we've overcomed it by giving less tasks to our teamfriend
+that is in another city.
+
+    Another big difficult was debugging. Finding the root of problems has caused us to lose a lot of days.
+We've encountered with a lot of different problems. Syncing the clock with code was the hardest task.
+Another big problem was ensuring the security. Without security, we have overwrite some registers and
+didn't realize it. Enhancing security has provideded our code to be safe. 
 
 
 
