--- a/report/main.tex
+++ b/report/main.tex
@@ -70,7 +70,33 @@ At first, Yusuf has designed the fetch cycle. Then Hakan and Emre designed the e
 
 
 \section{IMPLEMENTATIONS AND EXPLANATIONS }
-\subsection{Fetch Cycle}
+\subsection{Fetch Cycle, Counter and Decoding}
+In our implementations, we made only counter module seperated from the 
+combined system. It could have also been designed inside of overall 
+combined system as a register, but this was our design choice. It takes 
+clock as input, because at every positive edge we increase our timing signal
+by 1. However, to prevent unexpected result in the current postive edge we wait for
+0.25 ns in our implementation.
+
+Not only clock, but also reset signal taken as input for this module
+to return inital value for the timing signal. When it reset, it returns value 4 bit
+binary 1111 which is equal to -0001, this is been made because reset signal 
+does not depend on clock; therofore, after the reset we wait for new clock signal 
+to start new operations. New operations will be started with timing signal 0.
+
+INtial ve ilk always blcoklarından bahset**********************************
+
+For our combined module, we have  after making all necesessary connections, 
+
+When timing signal 0 arrives to our combined system, it starts to fetch cycle. Our 
+fetch cycle is totally takes 3 cycles. It has been made 3 cycles to prvent 
+changes unintended changes on the PC and IR.
+
+At first (0th) cycle of the fetch, we made 
+
+
+
+
 
 \subsection{Instructions With Address Reference}
 
@@ -84,6 +110,14 @@ At first, Yusuf has designed the fetch cycle. Then Hakan and Emre designed the e
 \section{OVERALL DESIGN PHOTO}
 
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/design.png}	
+    \caption{overall design photo}
+    \label{implementation}
+\end{figure}
+
+
 
 
 
@@ -93,11 +127,109 @@ At first, Yusuf has designed the fetch cycle. Then Hakan and Emre designed the e
 \section{SIMULATION RESULTS}
 
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_1.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_2.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_3.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_4.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_5.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_6.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_7.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_8.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_9.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_10.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_11.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_12.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{photos/system_result_13.png}	
+    \caption{simulation of system}
+    \label{implementation}
+\end{figure}
+
+
 
 
 \section{DISCUSSION}
 
-
+ilk önce nasıl fetch cycle yaptığından bahset. 
 
 
 
